@@ -534,7 +534,6 @@ PKL_DEF_INSN(PKL_INSN_POPAREM,"","poparem")
 PKL_DEF_INSN(PKL_INSN_MACRO,"","")
 
 PKL_DEF_INSN(PKL_INSN_NTON,"aa","nton")
-PKL_DEF_INSN(PKL_INSN_OTO,"aa","oto")
 PKL_DEF_INSN(PKL_INSN_ATOA,"aa","atoa")
 
 PKL_DEF_INSN(PKL_INSN_NEG,"a","neg")
